60-eks/app/50-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: roboshop-gateway
  namespace: roboshop
spec:
  gatewayClassName: roboshop-aws-alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: roboshop-aws-alb-config
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      options:
        gateway.k8s.aws/certificate-arn: "arn:aws:acm:us-east-1:220719767845:certificate/a175135e-2068-40e9-a8d1-d98ef246d948"
    allowedRoutes:
      namespaces:
        from: Same
